[package]
name = "running-go-rs"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]

[dependencies]
reqwest = "0.8.5"
base64 = "0.9.0"
json = "0.11.13"
md5 = "0.3.7"
rand = "0.4.2"
p-macro = "0.2.0"
itertools = "0.7"
uuid = "0.6"
maplit = "1.0"
chrono = "0.4"
retry = "0.4"

[features]
default = ["uuid/v4"]